--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Heart Emoji</title>
+    <title>Heart Emoji with JPEG Image</title>
     <meta charset="UTF-8">
 </head>
 <body>
-    <h1>I Love You Rashmi, Please Marry Me</h1>
-    <h1>&#x2764;</h1>
+    <h1>I am in madly love with you, Please marry me</h1>
+    <img src="heart.jpg" alt="Heart Image">
 </body>
 </html>
