--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             var messageContainer = document.getElementById("proposal-message");
             var messageText = document.getElementById("message-text");
             var message = `Dear ${partnerName},<br><br>`;
-            message += "I hope this message finds you well. I wanted to take a moment to express the depths of my feelings for you, " + partnerName + ".<br>";
-            message += "From the first moment we met, I knew there was something special about you, and as time passed, that feeling has only grown stronger.<br>";
-            message += "Your kindness, your warmth, and your love have enriched my life in ways I never thought possible.<br>";
-            message += `I cannot imagine a future without you by my side, ${partnerName}. You are my rock, my confidant, and my greatest joy.<br>`;
+            message += "दिल मेरा तुमसे प्यार करना चाहता है, " + ".<br>";
+            message += "दबी हुई मोहब्बत का इजहार करना चाहता है। <br>";
+            message += "जब से देखा है मैंने तुझे ओ सनम, .<br>";
+            message += `ये दिल सिर्फ तुम्हारा दीदार करना चाहता है। .<br>`;
             message += "So, with all the love in my heart, I ask:<br>";
             message += `<strong>${partnerName}, will you marry me?</strong><br><br>`;
             messageContainer.style.display = "block";
